duepublico-extras/src/main/resources/META-INF/resources/css/duepublico.css
#page {
	padding-top: 1rem;
}

/* reduces the font size of the headline on the metadata pages of the publications */
#page #main_content .detail_row .main_col h1{
	font-size: 1.5rem;
}

.with-icon {
	display: flex;
	flex-direction: row;
}

.with-icon i.fas {
	margin-top: 0.2ex;
	margin-right: 1ex;
}

li.with-icon i.fas {
	margin-top: 0.5ex;
	margin-right: 1ex;
}

.accordion .card {
    margin-bottom: 0px;
}

h5 {
	margin-top: 0.5rem;
}

.alert-between {
	margin-top: 10px;
	margin-bottom: 10px;
}

.alert-info a {
	color: #f39c12;
}

.mir-validation-messages {
	margin-bottom: 10px;
}

.has-feedback .form-control {
	padding-right: 15px;
}

.workflow-step .fas {
    font-family: "Font Awesome 5 Free";
}

.file_box .body .file_set.active_file .file_name > a::after {
    font-family: "Font Awesome 5 Free" !important;
}

/* ---------- MIR Metadata Page ---------- */

.mir_metadata dt {
	width: 42%;
}

.mir_metadata dd {
	width: 48%;
}

.ellipsis-description {
	margin-top: 0.5rem !important;
	margin-bottom: 0.5rem !important;
}

/* ---------- Table of Contents ---------- */

ol.mir-toc-sections ol.mir-toc-sections {
  margin-left: 3ex;
}

/* ---------- mir-access-rights-panel ---------- */

#mir-access-rights-panel img[src="https://mirrors.creativecommons.org/presskit/buttons/88x31/png/cc-zero.png"] {
  max-width: 100%;
}

/* ---------- adapt shariff style ---------- */
.shariff .theme-white .bluesky a {
  color: #0085FF;
}

